--- a/buildspec.yml
+++ b/buildspec.yml
@@ -21,8 +21,8 @@ artifacts:
   files:
     - appspec.yml
     - template.yml
+    - src/*
     - scripts/*
     - target/ROOT.war
     - template-configuration.json
     - classes/*
-    
